Resphan economy, the Ungod

--- a/Appendix/Languages.tex
+++ b/Appendix/Languages.tex
@@ -29,29 +29,31 @@ Here follow some etymology trees showing the relationships between some of the l
 
 
 
-\subsection[Scathaese languages]{\Scathaese{} languages}
-\Tree 
-  [.{\Draconic}
-    [.{Ancient \scathaese{} languages}
-      [.{\Tassian}
-        [.{\Mastheno}
-          [.{\Ortaican}
-            [.{Imetric} ] 
-            [.{\Ortic} ] 
-            [.{\Tepharin} ] 
-          ] 
-          [.{\Samurin} ] 
-        ] 
-      ]
-      [.{\Mekrii} 
-        [.{\Shurco}
-          [.{Rissitic} ] 
-        ] 
-      ]
-      [.{\Loi}
-      ]
-    ]
-  ]
+\subsection[Reptilian languages]{Reptilian languages}
+The three great \caisith language families were \hr{Talaac}{Talaac}, \hr{Saphyr language}{\Saphyr} and \hr{Kush}{Kush}. 
+
+% \Tree 
+%   [.{\Draconic}
+%     [.{Ancient \scathaese{} languages}
+%       [.{\Tassian}
+%         [.{\Mastheno}
+%           [.{\Ortaican}
+%             [.{Imetric} ] 
+%             [.{\Ortic} ] 
+%             [.{\Tepharin} ] 
+%           ] 
+%           [.{\Samurin} ] 
+%         ] 
+%       ]
+%       [.{\Mekrii} 
+%         [.{\Shurco}
+%           [.{Rissitic} ] 
+%         ] 
+%       ]
+%       [.{\Loi}
+%       ]
+%     ]
+%   ]
 
 
 
@@ -148,96 +150,35 @@ See the pronunciation tables.
 
 
 
-\subsection{Talaac (\Draconic)}
-\target{Draconic language}
-\target{Talaac}
-\index{Talaac}
-The language spoken by most \dragons and many \ophidians. 
+\subsection{\Durcaci}
+\target{Rissitic language}
+\target{Drukari language}
+\index{\Durcaci language}
+The dominant language of \Durcac. 
+Descended from \hs{Kush}. 
+Has its own unique writing system of glyphs. 
+Also called \emph{Rissitic}. 
+
+The \Durcaci language family also comprises a variety of related but distinct languages that were spoken by various tribes and nations in \Durcac. 
+Most peoples in the region spoke \Durcaci languages, but some spoke other, unrelated languages. 
+
+\Durcaci lacks the phoneme \txipa{[x]} (having only \txipa{[\c c]}). 
+It might also lack \txipa{[l]}. 
+
+
 
 
 
 \meta{%
-  Meant to resemble the \quo{Enochian} language used in astrologer John Dee's writing.} 
+  Rissitic is a rough, guttural language inspired by Danish, German and Dutch. 
+}
 
 
 
 
 
-\subsubsection{Classical Talaac}
-\target{Classical Talaac}
-\index{Classical Talaac}
-\index{Talaac!Classical Talaac}
-Classical Talaac was the language originally spoken by \hr{Sethicus}.
-Millennia later, a similar language was still spoken by many \ophidians. 
-This \quo{official} dialect of the language was still called Classical Talaac (to differentiate it from \hr{Mystic Talaac} and \hr{Vulgar Talaac}).
-
-
-
-
-
-\subsubsection{\TrueDraconic}
-\target{True Draconic}
-\target{Mystic Talaac}
-\index{\TrueDraconic}
-\index{Mystic Talaac}
-\index{Talaac!Mystic Talaac}
-The formal, magical language of the \dragons and \ophidians.
-Also called \emph{Mystic Talaac}. 
-It was derived from \emph{Classical Talaac}, the language originally spoken by \hr{Sethicus}. 
-
-Mystic Talaac was based on \hr{Ophidians discover spellwords}{a system of spellwords discovered by the \ophidians}. 
-
-Mystic Talaac is an extremely complex language to learn, as the grammar is very cryptic. 
-Even for \dragons{}, whose brains are superior to those of humanoids and pick up languages easier, it takes hundreds of years to learn correct Mystic Talaac. 
-A good command of the language is a sign of status among \dragons{}. 
-
-\target{True Draconic costs sanity}
-Speaking \TrueDraconic was a sorcerous thing. 
-Every word was a spell and a deep, possibly traumatic, cosmos-touching experience.
-It was taxing and drained the sanity of mortals. 
-Even formidable mortals like \Criseis only spoke \TrueDraconic when they must.
-
-\meta{%
-  I have used archaic English (Early Modern English) to represent \TrueDraconic.
-  
-  Note that Early Modern English had a convention that \quo{thou} was a familiar form and \quo{you} was a polite form.
-  I will not be using this convention.
-  In all uses of Early Modern English, \quo{thou/thee} is simply singular and \quo{ye/you} is simply plural.} 
-
-
-
-
-
-\subsubsection{\CommonDraconic}
-\target{Vulgar Talaac}
-\emph{Vulgar Talaac}, also called \emph{\CommonDraconic}, was the collective term for various simplified, degenerated dialects of Talaac. 
-Many mortal humanoids spoke it.
-There were many variants of Vulgar Talaac, not all mutually intelligible. 
-
-The full name for the language is \emph{Gemaltha N\^udrach Ruishaan} meaning \quo{Draconic daily speech}.
-Its common name is \emph{Ruishaan} meaning \quo{daily}.
-
-
-
-
-
-\subsubsection{Runes}
-\target{Draconic runes}
-\Draconic and the \quiljaaran languages were written with \quo{\ophidian runes}, also called \quo{draconic runes}.
-They were a degenerate form of the ancient \ophidian written language.
-
-\Sethicus had helped develop the runes. 
-There was much potential for magic inherent in the runes. 
-They were designed in accordance with \hs{occult geometry}. 
-
-
-
-
-
-\subsubsection{Inspiration}
-For inspiration for \Draconic words, I can look at the article on the \emph{World of Warcraft Wiki} about the Draconic language used in the \emph{Warcraft} world \cite{VideoGame:Warcraft}: 
-
-\href{http://www.wowwiki.com/Draconic}{http://www.wowwiki.com/Draconic}
+\subsubsection{Writing}
+Rissitic \hs{glyphs} resemble Egyptian hieroglyphs. 
 
 
 
@@ -250,7 +191,7 @@ For inspiration for \Draconic words, I can look at the article on the \emph{Worl
 \subsection{Imetric}
 \target{Imetric language}
 The language of the Imetrium. 
-Descended from Ortaican and written using the Ortaican alphabet. 
+Descended from \Ortaican and written using the \Ortaican alphabet. 
 
 Imetric lacks the phonemes \txipa{[b]} (approximated by \txipa{[v]}), \txipa{[T]}, \txipa{[x]}, \txipa{[\c c]}, \txipa{[S]}, \txipa{[z]} and \txipa{[Z]}. 
 
@@ -289,7 +230,9 @@ Imetric is written with {\Ortaican{} letters}.
 
 \subsection{\Ortaican}
 \target{Ortaican language}
+A \scathaese language and language family. 
 The ancestor of \hr{Tepharin language}{\Tepharin} and \hr{Imetric language}{Imetric}. 
+Descended from \hr{Saphyr language}{\Saphyr}. 
 
 
 
@@ -354,29 +297,110 @@ In form they resemble Japanese hiragana.
 
 
 
-\subsection{Rissitic}
-\target{Rissitic language}
-The language of Durcac. 
-Descended from \Shurco{}. 
-Has its own unique writing system of glyphs. 
-
-Rissitic lacks the phoneme \txipa{[x]} (having only \txipa{[\c c]}). 
-It might also lack \txipa{[l]}. 
+\subsection{\Saphyr}
+\target{Saphyr language}
+\index{\Saphyr}
+A \caisith language. 
+Spoke in \hr{Saphyrae}{\Saphyrae}. 
 
 
+
+
+
+
+
+
+
+\subsection{Talaac (\Draconic)}
+\target{Draconic language}
+\target{Talaac}
+\index{Talaac}
+The language spoken by most \dragons and many \ophidians. 
 
 
 
 \meta{%
-  Rissitic is a rough, guttural language inspired by Danish, German and Dutch. 
-}
+  Meant to resemble the \quo{Enochian} language used in astrologer John Dee's writing.} 
 
 
 
 
 
-\subsubsection{Writing}
-Rissitic \hs{glyphs} resemble Egyptian hieroglyphs. 
+\subsubsection{Classical Talaac}
+\target{Classical Talaac}
+\index{Classical Talaac}
+\index{Talaac!Classical Talaac}
+Classical Talaac was the language originally spoken by \hr{Sethicus}.
+Millennia later, a similar language was still spoken by many \ophidians. 
+This \quo{official} dialect of the language was still called Classical Talaac (to differentiate it from \hr{Mystic Talaac} and \hr{Vulgar Talaac}).
+
+
+
+
+
+\subsubsection{Mystic Talaac}
+\target{True Draconic}
+\target{Mystic Talaac}
+\index{\TrueDraconic}
+\index{Mystic Talaac}
+\index{Talaac!Mystic Talaac}
+The formal, magical language of the \dragons and \ophidians.
+Also called \emph{\TrueDraconic}. 
+It was derived from \emph{Classical Talaac}, the language originally spoken by \hr{Sethicus}. 
+
+Mystic Talaac was based on \hr{Ophidians discover spellwords}{a system of spellwords discovered by the \ophidians}. 
+
+Mystic Talaac is an extremely complex language to learn, as the grammar is very cryptic. 
+Even for \dragons{}, whose brains are superior to those of humanoids and pick up languages easier, it takes hundreds of years to learn correct Mystic Talaac. 
+A good command of the language is a sign of status among \dragons{}. 
+
+\target{True Draconic costs sanity}
+Speaking \TrueDraconic was a sorcerous thing. 
+Every word was a spell and a deep, possibly traumatic, cosmos-touching experience.
+It was taxing and drained the sanity of mortals. 
+Even formidable mortals like \Criseis only spoke \TrueDraconic when they must.
+
+\meta{%
+  I have used archaic English (Early Modern English) to represent \TrueDraconic.
+  
+  Note that Early Modern English had a convention that \quo{thou} was a familiar form and \quo{you} was a polite form.
+  I will not be using this convention.
+  In all uses of Early Modern English, \quo{thou/thee} is simply singular and \quo{ye/you} is simply plural.} 
+
+
+
+
+
+\subsubsection{\CommonDraconic}
+\target{Vulgar Talaac}
+\emph{Vulgar Talaac}, also called \emph{\CommonDraconic}, was the collective term for various simplified, degenerated dialects of Talaac. 
+Many mortal humanoids spoke it.
+There were many variants of Vulgar Talaac, not all mutually intelligible. 
+
+The full name for the language is \emph{Gemaltha N\^udrach Ruishaan} meaning \quo{Draconic daily speech}.
+Its common name is \emph{Ruishaan} meaning \quo{daily}.
+
+
+
+
+
+\subsubsection{Runes}
+\target{Draconic runes}
+\Draconic and the \quiljaaran languages were written with \quo{\ophidian runes}, also called \quo{draconic runes}.
+They were a degenerate form of the ancient \ophidian written language.
+
+\Sethicus had helped develop the runes. 
+There was much potential for magic inherent in the runes. 
+They were designed in accordance with \hs{occult geometry}. 
+
+
+
+
+
+\subsubsection{Inspiration}
+For inspiration for \Draconic words, I can look at the article on the \emph{World of Warcraft Wiki} about the Draconic language used in the \emph{Warcraft} world \cite{VideoGame:Warcraft}: 
+
+\href{http://www.wowwiki.com/Draconic}{http://www.wowwiki.com/Draconic}
 
 
 
