--- a/Appendix/Tropes.tex
+++ b/Appendix/Tropes.tex
@@ -111,7 +111,7 @@
   \item[Extraordinarily Empowered Girl:] Silqua. 
   \item[Face Heel Turn:] Carzain. 
   \item[Fantasy Counterpart Culture:] 
-    Durcac = Egypt, Imetrium = Rome/Communism, Redcor = Christianity, Geica = USA.
+    \Durcac = Egypt, Imetrium = Rome/Communism, Redcor = Christianity, Geica = USA.
   \item[Flaw Exploitation:] 
     The Sentinels will need a lot of this to defeat \Daggerrain.
   \item[Functional Magic:] 
