--- a/Characters/MortalCharacters.tex
+++ b/Characters/MortalCharacters.tex
@@ -581,7 +581,7 @@ It's a long quest, but in the end Ilcas succeeds.
 He is \honoured back home for his heroic accomplishments.
 As a reward for this mission, he requests to be granted the \honorary rank of \Retaxis, so he now holds the same rank as his wife. 
 
-The rank is granted to him by Salacar in person. 
+The rank is granted to him by \Sarokash in person. 
 
 
 
@@ -1061,8 +1061,8 @@ Compare to the Chaos Warriors from \cite{RPG:Warhammer}.
 
 
 \subsubsection{Youth}
-\Narkiza came from a tribe in the southern Durcac.
-He was ethnically Durcaci and spoke High Rissitic, but his tribe was more savage and brutal than most. 
+\Narkiza came from a tribe in the southern \Durcac.
+He was ethnically \Durcaci and spoke High Rissitic, but his tribe was more savage and brutal than most. 
 
 He went through some measure of \trope{TrainingFromHell}{Training From Hell} in his youth.
 He worked very hard to become strong, and to be a leader.
@@ -3999,6 +3999,14 @@ In contrast, Vizicar's eyes are blue, which is pretty typical for his \vclan.
 \target{Carzain is a Demihuman}
 Carzain had somewhat dark skin. 
 Dark enough that some might call him a \demihuman.
+
+
+
+
+
+\subsubsection{Stigmata}
+Carzain had some \hr{Vaimon stigmata}{Vaimon stigmata}. 
+He had some nasty sores on his body, scars of spells that had taken a great toll on him. 
 
 
 
