--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -466,6 +466,24 @@ She was still one of the mightiest beings alive on the planet.
 
 
 
+\section{Eresshakal}
+Eresshakal was the oldest \dragon still around at the time of the \thirdbanewar\dash older even than \Iscrafel. 
+She had spent most of that time in Durance.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \section{\IrocasSecherdamon}
 \target{HriistD}
 \target{Secherdamon}
@@ -477,7 +495,7 @@ His father was \hr{Apep-Nesthra}{\ApepNesthra}.
 He always looked up to \Nexagglachel, and after his brother's death \Secherdamon{} assumed his role as \dragonking. He is one of the leaders of the Sentinels and one of the most influential \dragons{} in the world.
 
 One of his secret identities was \HriistN. 
-In this guise he led the Rissitic Empire of Durcac. 
+In this guise he led the Rissitic Empire of \Durcac. 
 
 In a sense, \Secherdamon{} was a planner, schemer and creator. 
 
@@ -2155,7 +2173,7 @@ In practice, \Secherdamon (with his subtler methods) achieved far more.
 \target{Ishnaruchaefir and the Imetrium}
 \Ishnaruchaefir had relatively good relations with the Imetrium. 
 He appeared in \hs{Imetric mythology}, and here for once he was not reviled. 
-This was because Salacar was his kinsman and his old ally. 
+This was because \Sarokash was his kinsman and his old ally. 
 
 
 
@@ -2230,7 +2248,7 @@ This has to do with the dark \hs{cosmic gods} whom \Ishnaruchaefir{} has studied
 \Ishnaruchaefir{} spoke several languages. 
 
 He spoke an archaic form of Imetric. 
-He had had dealings with the Imetrians, since Salacar was his kinsman. 
+He had had dealings with the Imetrians, since \Sarokash was his kinsman. 
 
 But he never learned \Velcadian. 
 Before the \thirdbanewar{} he had not been to \Azmith{} for centuries, so he had never learned it. 
@@ -2786,7 +2804,7 @@ Older sister of \Tentocoth, cousin of \Rathyon.
 
 
 
-\section[Dzairith Tyrasshana]{\TyarithXserasshana}
+\section[Tyrasshana]{\TyarithXserasshana}
 \target{Tiamat}
 \index{\TyarithXserasshana}
 \TyarithXserasshana{} was a lover of \Sethicus and one the very first \dragons. 
@@ -2859,6 +2877,14 @@ She has a number of artifacts that are now highly sought-after relics.
   Unfettered at last the Trinity of Might, \\
   the Sceptre, the Sword and the Ring!
 }
+
+
+
+
+
+\subsubsection{Ungod of the Outer Darkness}
+\index{Ungod}
+After her defeat, \Tiamat became the \hr{Ungod} of the Outer Darkness. 
 
 
 
@@ -3319,7 +3345,7 @@ These were treated as sacred by the surviving \Sethican cultists.
 
 Some of \Sethicus's earlier works were full of errors. 
 For one, they confused the \xss with all sorts of other cosmic gods, more or less labelling all cosmic gods as \xss. 
-For another, \Sethicus once believed that \hr{Sethicus believed XS would soon rise}{the \xss would very soon rise} and reclaim the world. 
+For another, \Sethicus once believed that the \xss would very soon rise and reclaim the world. 
 \Sethicus later learned the error of this, but some of his older writings still existed. 
 And since those works contained many spells that did work, they were accepted as canonical by the cult, and those erroneous beliefs were perpetuated. 
 
@@ -4452,10 +4478,10 @@ Eventually \hr{Sethicus kills Ramarxes}{\Sethicus slew him}.
 
 
 
-\section{Salacar}
-\target{Salacar}
-\index{Salacar}
-Salacar is the chief god of the Imetric Tribunal and the ruler of the Imetrium. 
+\section{\Sarokash}
+\target{Sarokash}
+\index{\Sarokash}
+\Sarokash is the chief god of the Imetric Tribunal and the ruler of the Imetrium. 
 \also{Imetrium, Tribunal}
 
 
@@ -4467,7 +4493,7 @@ Salacar is the chief god of the Imetric Tribunal and the ruler of the Imetrium.
 
 
 \subsection{Physique}
-In his true form, Salacar is a giant \nagalord. 
+In his true form, \Sarokash is a giant \nagalord. 
 He often takes the form of a \scatha. 
 In all forms, his scales are glittering emerald green. 
 
