--- a/Commands.tex
+++ b/Commands.tex
@@ -1173,8 +1173,8 @@
 \newcommand{\Durcaccontinent} {\DurcacContinent}
 
 % Durcac, homeland of the Rissitics
-\newcommand{\Durcac}          {Durcac\xspace}
-\newcommand{\Durcaci}         {Durcaci\xspace}
+\newcommand{\Durcac}          {Drucar\xspace}
+\newcommand{\Durcaci}         {Drucari\xspace}
 
 
 
@@ -2602,6 +2602,13 @@
 \end{comment}
 
 \begin{comment}
+\subsubsection{Economy}
+\end{comment}
+
+\newcommand{\Jal}              {\emph{Jal}\xspace}
+\newcommand{\jal}              {\emph{jal}\xspace}
+
+\begin{comment}
 \subsubsection{Items}
 \end{comment}
 
@@ -3151,9 +3158,10 @@
 \newcommand{\Okiriru}          {Okiriru{}\xspace}
 
 % Saphyrae, a Quil-Jaaran nation that existed before the Dragons came. 
-\newcommand{\Saphyraeans}      {\Saphyraean{}s{}\xspace}
-\newcommand{\Saphyraean}       {\Saphyrae{}an{}\xspace}
-\newcommand{\Saphyrae}         {Saph\yvowel rae{}\xspace}
+\newcommand{\Saphyraeans}      {\Saphyraean{}s\xspace}
+\newcommand{\Saphyraean}       {\Saphyrae{}an\xspace}
+\newcommand{\Saphyrae}         {\Saphyr{}ae\xspace}
+\newcommand{\Saphyr}           {Saph\yvowel r\xspace}
 
 \newcommand{\Asaathur}         {Asaathur\xspace}
 \newcommand{\Haamon}           {Haamon\xspace}
@@ -4184,6 +4192,9 @@
 \newcommand{\Naruc}                       {N\along ruc\xspace}
 \newcommand{\Osanggrath}                  {Osanggrath\xspace}
 \newcommand{\NarucOsanggrath}             {\Naruc{} Osanggrath\xspace}
+
+% Leader of the Imetrium, previously known as Salacar.
+\newcommand{\Sarokash}                    {Sarokash\xspace}
 
 
 
