--- a/MithFull.tex
+++ b/MithFull.tex
@@ -58,8 +58,8 @@
 
   \part{\DominatorsofMith}
     \include{Story/OphidianCivilization}
-    \include{Story/SethicusRise}
-    \include{Story/SethicusReign}
+    %\include{Story/SethicusRise}
+    %\include{Story/SethicusReign}
     \include{Story/AfterSethicus}
     \include{Story/AvatarofEntropy}
     \include{Story/Merkyrah}
