--- a/Story/Merkyrah.tex
+++ b/Story/Merkyrah.tex
@@ -1493,7 +1493,7 @@ This made them very bitter, so when the rebels came and preached to them the \be
 \citebandsong{Nile:InTheirDarkenesShrines}{Nile}{
   The Blessed Dead
 }{
-  Looked Down Upong With Scorn\\
+  Looked Down Upon With Scorn\\
   We Work the Fields of the Masters\\
   And Share Not the Bounty of the Black Earth
 
