--- a/Story/Sentinels01Notes.tex
+++ b/Story/Sentinels01Notes.tex
@@ -333,7 +333,7 @@ The Redcor Church and the Imetrium will be far too busy to respond to Pelidor's 
 
 But in reality the Runger-Pelidor war is more important than the Rissitic invasion, because it sets the stage for the resurrection of \Nithdornazsh. 
 
-Remember to make it clear that Durcac = Rissitics! 
+Remember to make it clear that \Durcac = Rissitics! 
 Write this multiple times! 
 
 And remember to advertise \hr{Narkiza}{\Narkiza}. 
@@ -344,7 +344,7 @@ Namedrop him and tell everyone how skilled and feared and powerful and cool he i
 
 
 \subsubsection{Imagery}
-Some people do not understand the fuss because they have heard that Durcac is relatively small and its warriors few in number.
+Some people do not understand the fuss because they have heard that \Durcac is relatively small and its warriors few in number.
 The wiser people know that it is the Rissitics' superior technology and powerful sorcery that make them dangerous.
 
 The Pelidorian court should be discussing the \hr{Rissitics and Runger}{Rissitic invasion of \Scyrum/Sumian} and what it means for all \Galessan. 
@@ -1283,10 +1283,10 @@ The Imetrians did not drive so hard a bargain.
 They know it will be bad for them if Pelidor falls to Runger. 
 Runger has never let many Imetrians in. 
 The Imetrians don't like Runger. 
-To top it off, the Imetrians have long suspected Runger of having covert dealings with Durcac, albeit without proof. 
+To top it off, the Imetrians have long suspected Runger of having covert dealings with \Durcac, albeit without proof. 
 
 Ilcas talks to his mage-priest companion about this. 
-They discuss the fact that Runger is possibly in league with Durcac. 
+They discuss the fact that Runger is possibly in league with \Durcac. 
 
 \begin{prose}
   Ilcas: 
@@ -1393,7 +1393,7 @@ They have no \grulcans, though.
 \Grulcans are mainly a \Galessan thing.
 
 There are also some 200 \mezolisks. 
-These are actually imported from Durcac. 
+These are actually imported from \Durcac. 
 But they are not badly conspicuous. 
 Runger has been known to use \mezolisks{} before. 
 The Rissitics have just helped them beef up the number of them. 
@@ -1573,7 +1573,7 @@ Here they need a mage for artillery support, so they ask Carzain to join them.
 
 
 \subsection{Morgan Runger sees what he has done}
-We follow Morgan Runger. He has made an alliance with the Rissitics. Originally, he was thrilled at the prospect of rising to power as an ally of Durcac, but of late he has come to doubt, for two reasons. One, he fears that \Nechsain{} will subjugate him as a vassal rather than a true ally. Two, and perhaps more importantly, he beginst to ponder the ethical consequences of his actions. 
+We follow Morgan Runger. He has made an alliance with the Rissitics. Originally, he was thrilled at the prospect of rising to power as an ally of \Durcac, but of late he has come to doubt, for two reasons. One, he fears that \Nechsain{} will subjugate him as a vassal rather than a true ally. Two, and perhaps more importantly, he beginst to ponder the ethical consequences of his actions. 
 
 He oversees \Takestsha{} and her fellow sorcerers as they invoke the terrible spells gleaned from the tablets recovered from \Rungertemple, and he witnesses firsthand the horrible destruction they cause. 
 
@@ -4793,7 +4793,7 @@ He thinks and visualizes \ps{\Ishnaruchaefir} name, something he has not done fo
 
 \subsection{\Forclin falls}
 The war lasts about a year. Eventually, Runger escalates the war by bringing in more and more mages and supernatural aid. 
-The Imetrians begin to suspect that Runger has allied with Durcac and gained the aid of Rissitic mages and troops (which is true). 
+The Imetrians begin to suspect that Runger has allied with \Durcac and gained the aid of Rissitic mages and troops (which is true). 
 The Imetrians are not certain, but these suspicions sway them to finally send some aid to Pelidor. 
 
 The mages draw so much magical power that they \hr{Magic overdose}{overdose and damage their bodies}. 
