--- a/Story/Sentinels02Notes.tex
+++ b/Story/Sentinels02Notes.tex
@@ -1273,9 +1273,9 @@ Carzain is impressed by Ilcas' ballsy-ness.
 
 
 \subsection{Ilcas comments on worms}
-Some people eat food with Durcaci spice. 
+Some people eat food with \Durcaci spice. 
 They talk about the rumour that \hr{Spice and worms}{the spice is produced by giant sandworms}. 
-They ask Ilcas about it, since he has \travelled in Durcac. 
+They ask Ilcas about it, since he has \travelled in \Durcac. 
 
 He says he \emph{thinks} it is true. 
 But he has never seen these worms. 
@@ -1525,7 +1525,7 @@ After their victory, some of the Redcor are praised for their great worth, but C
 
 %that he willingly turns to evil. In his experience, those that call themselves \squo{good} are no better. So, while on a mission, he betrays his companions and kills them, including one or more Redcor. 
 
-%He goes to Geica and learns to channel Nieur like the Geican mages do. When he returns, he is far more powerful than before. 
+%He goes to Geica and learns to channel \itzach like the Geican mages do. When he returns, he is far more powerful than before. 
 
 
 
@@ -1704,7 +1704,7 @@ Perhaps this is where he finds \Belzir, and she finds him.
 
 
 \subsection{\Belzir contacts Carzain in dreams}
-Carzain is visited in his dreams by a mysterious woman. In his dreams, they have sex. The wraith-woman tempts him with promises of power, glory and revenge upon the Redcor. It turns out that the woman is \Belzir, the last \Calipha of the ancient \VaimonCaliphate and called the Dark Prophet of Nieur by some. She wants him to join her and her servitors, who are working to resurrect her. 
+Carzain is visited in his dreams by a mysterious woman. In his dreams, they have sex. The wraith-woman tempts him with promises of power, glory and revenge upon the Redcor. It turns out that the woman is \Belzir, the last \Calipha of the ancient \VaimonCaliphate and called the Dark Prophet of \itzach by some. She wants him to join her and her servitors, who are working to resurrect her. 
 
 She also approaches Vizicar\dash maybe both at the same time, maybe one at a time. 
 
