--- a/Story/Sentinels04Notes.tex
+++ b/Story/Sentinels04Notes.tex
@@ -1670,8 +1670,10 @@ In a way, this is \hr{Ishnaruchaefir sees three futures}{\ps{\Ishnaruchaefir} ni
 
 
 \section[The Return of Tyrasshana]{The Return of \Tiamat}
+\target{Ungod}
+\index{Ungod}
 In secret, \Tiamat was behind the \resphain. 
-She was the Voidbringer.
+She was the Ungod of the Outer Darkness.
 Her goal was to absorb all intelligent life on \Miith and unite them all in one great Concord. 
 She found the \banes and conquered them and made them her slaves, part of her Concord hivemind. 
 That was one of the reasons why the \banes were so horrid: 
@@ -1687,6 +1689,9 @@ The advent of \Lithrim finally freed her.
 She was now free. 
 Ramiel, \Azeraid and \Iscrafel managed to destroy \Daggerrain and the \bane hordes, but they could not stop the Mother. 
 \Tiamat was now awake, and she would devour the world. 
+
+(\Daggerrain was a servant of the \hr{Voidbringer}, the cosmic god of the \banes. 
+The Voidbringer is separate from the Ungod, although they are often conflated by the ignorant.)
 
 But all was not completely bleak. 
 \Tiamat's merger with the \banes made her more stagnant and decaying and destructive than she might otherwise have been.
