--- a/World/Azmith/Azmith.tex
+++ b/World/Azmith/Azmith.tex
@@ -5,7 +5,7 @@
 \Azmith{} is a Realm on \Miith{}, a fragment of the shattered realm of \Tembrae. 
 The name \quo{\Azmith} also refers to the politically most important continent of the Realm. 
 
-The continent consists of \hr{Velcad}{\Velcad}, the \hs{Northern Kingdoms}, \hs{Threll}, the \hs{Imetrium}, \hs{Uzur}, \hs{Durcac}, the \hs{Near Orient} and the \hr{Serpentines}{\Serplands}. %Some scholars also consider Irokas a part of \Azmith{} while others do not. 
+The continent consists of \hr{Velcad}{\Velcad}, the \hs{Northern Kingdoms}, \hs{Threll}, the \hs{Imetrium}, \hs{Uzur}, \hr{Durcac}{\Durcac}, the \hs{Near Orient} and the \hr{Serpentines}{\Serplands}. %Some scholars also consider Irokas a part of \Azmith{} while others do not. 
 
 \quo{\Azmith} is \hs{Archaic Vaimon} for \quo{all the world} (containing the word \quo{\Miith}, meaning \quo{the world}). 
 
@@ -521,7 +521,7 @@ It was defeated in a series of wars by \VizicarDurasRespina{} and others and did
 
 Their heritage was carried on by the \Ortaicans{} and others. 
 
-Modern-day \hs{Durcac} owes much of its cultural heritage to the \Shurco.
+Modern-day \hr{Durcac}{\Durcac} owes much of its cultural heritage to the \Shurco.
 
 
 
@@ -921,7 +921,7 @@ The capital city of Belek.
 \index{Clictua}
 A \hr{Meccaran}{\meccaran}-dominated kingdom in northeastern \hs{Uzur}. 
 One of the largest known kingdoms in Uzur. 
-It borders the \hs{Imetrium} to the north and \hs{Durcac} to the east. 
+It borders the \hs{Imetrium} to the north and \hr{Durcac}{\Durcac} to the east. 
 
 
 
@@ -2788,7 +2788,7 @@ With stripes of white or copper.
 \target{caste}
 \target{Caste system}
 \index{caste system}
-\index{Durcac!caste system}
+\index{\Durcac!caste system}
 \index{Rissitics!caste system}
 The Rissitics are organized in a system of castes.
 The castes are, in descending order of status:
@@ -3222,7 +3222,7 @@ One of the Imetrium's strengths is their soldiers.
 The Rissitics may have higher technology and magic, and certain empires have fielded larger armies, but none have had soldiers more well-trained, disciplined and dedicated as the Imetrians. 
 
 They are backed by their gods: 
-Salacar gives them the faith to fight for what is right. 
+\Sarokash gives them the faith to fight for what is right. 
 Eoncos strengthens their bodies. 
 Dessali strengthens their minds. 
 And so on. 
@@ -3376,7 +3376,7 @@ The Imetrium is \hr{Imetrium and water}{a sea power}.
 
 
 \section{Politics}
-The Imetrium is traditionally hostile towards \hs{Durcac}. 
+The Imetrium is traditionally hostile towards \hr{Durcac}{\Durcac}. 
 
 They have sometimes allied with the \hr{Iquinian}{\Iquinian} Vaimons
 
@@ -3407,7 +3407,7 @@ The Rissitics rarely tried to invade the Imetrium.
 \subsection{Ties to the \nagae}
 \target{Imetrians and Nagae}
 The Imetrium is tied to the \nagae. 
-Perhaps Salacar is actually a \nagalord{} in disguise. 
+Perhaps \Sarokash is actually a \nagalord{} in disguise. 
 
 Also, Dessali is a \naiad, a water-dwelling \quo{spirit}. 
 
@@ -3437,8 +3437,8 @@ The five major gods make up \quo{the Tribunal}, which governs the Imetric panthe
 The Tribunal members are: 
   
 \begin{gloss}
-  \gitemlink{Salacar} 
-  \index{Salacar}
+  \gitemlink[Sarokash]{\Sarokash} 
+  \index{\Sarokash}
     God of justice, head of the pantheon.
   \gitemlink{Dessali} 
   \index{Dessali}
@@ -3532,10 +3532,10 @@ The Rissitics believed in \hr{Reincarnation}{reincarnation}.
 \target{The truth about the Imetrium}
 The Imetrium is secretly backed by the \nagae. 
 
-Salacar is a saviour-figure of a kind. 
+\Sarokash is a saviour-figure of a kind. 
 Similar to the \human{} \quo{Messiah} that is mentioned in \cite{StevenErikson:TheBonehunters}, who might be Shadowthrone. 
 
-Salacar is a \quo{promised child}, born to return his own people to glory and, in his creators' eyes, purge the world of evil. 
+\Sarokash is a \quo{promised child}, born to return his own people to glory and, in his creators' eyes, purge the world of evil. 
 As such, he carries in him the souls of many of his forebears in him, and their many thousands of years worth of memories. 
 He is an powerful \vertex, the \apex{} of a \cuezcan/\naga{} \matrixx. 
 
@@ -3560,7 +3560,7 @@ At some point in the story, \hs{Telcastora Ilcas} learns something disquieting a
 \section{Northstar clan}
 \index{Northstar!Northstar clan}
 The Northstars are a \scathaese{} clan. 
-The Northstar name is famous and prestigious (known throughout the Imetrium and parts of southern \Velcad{} and northern Durcac), and the clan has produced several renowned heroes. 
+The Northstar name is famous and prestigious (known throughout the Imetrium and parts of southern \Velcad{} and northern \Durcac), and the clan has produced several renowned heroes. 
 The Northstars trace their history at least 1000 years back. 
 Today they are Imetrians, but they retain certain pagan traditions, of which the most well-known is the veneration of the \hs{North Star}. 
 
@@ -3706,11 +3706,11 @@ Norat was an ancient chieftain of a \Mastheno{} tribe that would later adopt his
 
 
 \subsection{Rise to power}
-The \Ortaicans{} originated from the south, in modern-day Durcac. 
+The \Ortaicans{} originated from the south, in modern-day \Durcac. 
 They are a \Tassian{} people, descended from the \Masthenon. 
 Under the influence of \hs{Sseju} and many others, they became a big \bacconate. 
 
-At the height of its power, \Ortaica{} covered all of southern \hr{Azmith}{\Azmith}, including the lands that are now {Durcac}, the \hs{Imetrium}, southern \hr{Velcad}{\Velcad} and even \hs{Uzur} and \hs{Geica}. 
+At the height of its power, \Ortaica{} covered all of southern \hr{Azmith}{\Azmith}, including the lands that are now {\Durcac}, the \hs{Imetrium}, southern \hr{Velcad}{\Velcad} and even \hs{Uzur} and \hs{Geica}. 
 \Scathaese{} cultures today, especially the Imetrium, owe much of their culture to the Ortaicans. 
 
 The Ortaicans, alongside their kin the \Shurcos, warred against the \hr{Vaimon Caliphate}{\VaimonCaliphate} and were beaten by \hr{Vizicar}{\VizicarDurasRespina}. 
@@ -4954,7 +4954,7 @@ This was a rare and powerful spell.
 
 
 \chapter{The Rissitics}
-\index{Durcac}
+\index{\Durcac}
 \index{Durkhak}
 \index{Rissitics}
 \target{Durcac}
@@ -4962,7 +4962,7 @@ This was a rare and powerful spell.
 \target{Rissitics}
 A collection of peoples south in \hr{Durcac Continent}{\DurcacContinent}, united by the Rissitic religion \hr{Rissitic tribes divided}{but not always much else}. 
 
-The largest Rissitic nation was Durcac. 
+The largest Rissitic nation was \Durcac. 
 
 The whole area was also called the Rissitic Dominion or the Rissitic Empire, which was not always a fitting description.
 
@@ -5067,7 +5067,7 @@ A thumb is 3 cm. Three thumbs make a finger (9 cm), twelve fingers make a stride
 
 \section{Demographics}
 
-The \scathaese{} population of Durcac is largely \hr{Mekrii}{\Mekrii}, descended from the \hr{Shurco}{\Shurco}. 
+The \scathaese{} population of \Durcac is largely \hr{Mekrii}{\Mekrii}, descended from the \hr{Shurco}{\Shurco}. 
 
 The area claimed by the Rissitics was home to a number of nomadic peoples, some of which were Rissitic in name only, or not at all. 
 
@@ -5093,12 +5093,12 @@ The area claimed by the Rissitics was home to a number of nomadic peoples, some 
 
 \subsection{Desert}
 \target{Durcac desert}
-Abroad, it was said that virtually all of Durcac was covered by desert. 
+Abroad, it was said that virtually all of \Durcac was covered by desert. 
 This was actually not true, but mostly just hearsay and rumours, painting the Rissitics as inhuman monsters. 
-In reality, only parts of eastern Durcac were desert. 
+In reality, only parts of eastern \Durcac were desert. 
 
 Remember to have an explanation for this desert. 
-Durcac was devastated and defiled in some terrible war in ages past. 
+\Durcac was devastated and defiled in some terrible war in ages past. 
 
 
 
@@ -5177,7 +5177,7 @@ He invested his full support in them.
 At first they existed as an underground cult, or even fugitives, hiding from the dominant Iquinians and Imetrians. 
 This went on for centuries. 
 
-The surviving Rissitics, persecuted, fled south into Durcac. 
+The surviving Rissitics, persecuted, fled south into \Durcac. 
 Here they allied and mixed with some indigenous tribes from the south and east. 
 (This was why their language was so far from \Ortaican.)
 
@@ -5214,7 +5214,7 @@ This \quo{drilling} was dangerous business, though.
 It destabilized the barriers between the Realms. 
 At times, the barriers would spring open and dangerous things would leak in from the Beyond: 
 Monsters, storms, madness, disease, catastrophes that warp the fabric of the world and cause people, buildings and places to become deformed. 
-This sort of thing happened distressingly often in Durcac. 
+This sort of thing happened distressingly often in \Durcac. 
 
 To curb this effect, the Sentinels \hr{Purpose of the caste system}{devised the Rissitic caste system}. 
 
@@ -5231,7 +5231,7 @@ The goal of this hole Shroud-drilling business was to create the \hs{Dagger}.
 \subsection{Divided}
 \target{Rissitic tribes divided}
 Before the coming of \hr{Narkiza}{\Narkiza}, the Rissitics were not a unified nation, but a loose collection of tribes.
-Durcac was the largest, most powerful Rissitic nation, but not the only one, and it controlled less than half of the Rissitic peoples.
+\Durcac was the largest, most powerful Rissitic nation, but not the only one, and it controlled less than half of the Rissitic peoples.
 
 They were united by the Rissitic religion, but Rissit/\Secherdamon was not the only Rissitic god, and he did not have complete control of them.
 Other gods struggled against him, as did the \jinn. 
@@ -5286,15 +5286,15 @@ He got a \hr{Narkiza's dark warlord reputation}{reputation as a dark warlord}.
 
 
 \section{Language}
-\index{Durcac!language}
+\index{\Durcac!language}
 \index{Rissitics!Rissitic language}
 The Rissitic peoples did not all speak the same tongue.
 There was a whole family of Rissitic languages. 
-\quo{High Rissitic} was spoken in Durcac.
+\quo{High Rissitic} was spoken in \Durcac.
 Some of the tribes spoke languages completely different from and unrelated to Rissitic.
 
 High Rissitic was far from \Ortaican. 
-It had some roots in \Ortaican, but was based more on the languages of the \hr{Rissitics merge with tribes}{indigenous Durcaci tribes that assimilated the Rissitic cult}. 
+It had some roots in \Ortaican, but was based more on the languages of the \hr{Rissitics merge with tribes}{indigenous \Durcaci tribes that assimilated the Rissitic cult}. 
 
 Rissitic is harsh and guttural, meant to resemble Danish, Dutch and German. 
 Some words are taken from Egyptian or Mesopotamian languages, however, since \hs{Rissitic mythology} is inspired by those of Egypt and Mesopotamia. 
@@ -5704,8 +5704,8 @@ Perhaps have an Order of the Jackal, whose members wear jackal-like metal masks 
 \target{Rissitic infighting}
 Like the rest of \ps{\Secherdamon} minions, the Dark Crescent was \hr{Secherdamon plagued with corruption}{plagued by corruption and infighting}. 
 
-Durcac, the Rissitic Dominion, is ruled by \HriistN, who is actually \HriistD{} in disguise. 
-But Durcac is infiltrated. 
+\Durcac, the Rissitic Dominion, is ruled by \HriistN, who is actually \HriistD{} in disguise. 
+But \Durcac is infiltrated. 
 Chiefly by agents of other Sentinel factions, but also by Cabalists. 
 
 Have some backstabbing like among Sha'ik's army in \cite{StevenErikson:HouseofChains} or the Malazans in \cite{StevenErikson:TheBonehunters}. 
@@ -5719,7 +5719,7 @@ Remember that the Cabal is more numerous and better organized than the chaotic S
 \subsection{Economy and trade}
 \target{Rissitic economy}
 \index{technology!Rissitic}
-Durcac was not merely a warrior nation. 
+\Durcac was not merely a warrior nation. 
 They were also a major power by virtue of trade. 
 Their geographical position gave them access to exotic goods from the south and southeast. 
 And their high technology let them produce many unique and valuable export goods. 
@@ -5728,7 +5728,7 @@ Among other things, many quality guns were Rissitic made.
 
 Have more examples of Rissitic-made things! 
 
-Durcac's soul was not very fertile, but they made up for it with technology and industry. 
+\Durcac's soul was not very fertile, but they made up for it with technology and industry. 
 The standard of living was relatively high. 
 Even slaves were rather well off. 
 
@@ -5740,7 +5740,7 @@ There was lots of pollution, though.
 
 \subsubsection{Spice}
 \target{Spice and worms}
-Durcac exports a pepper-like spice. 
+\Durcac exports a pepper-like spice. 
 Rumours have it that this spice is produced by some enormous giant worms that live in the \hr{Durcac desert}{desert}. 
 
 
@@ -5781,7 +5781,7 @@ They were seen as the marauding Legions of Chaos.
 The Rissitics were seen as demonic hordes of evil, feared by the \Velcadians.
 They used dark sorcery liberally and all the time, making them seem inhuman and supernatural monsters.
 
-Durcac was a nightmare place where laughing evil sorcerers kidnapped beautiful virgins and cast them screaming into great \hs{ovens} of fire to be burned alive as food for the sorcerers' terrible gods. 
+\Durcac was a nightmare place where laughing evil sorcerers kidnapped beautiful virgins and cast them screaming into great \hs{ovens} of fire to be burned alive as food for the sorcerers' terrible gods. 
 
 They were seen as \hr{Imetric reputation}{worse than the Imetrium}.
 
@@ -5818,7 +5818,7 @@ Perhaps the Rissitics, at least the upper echelons, are desperate to conquer for
 
 \section{Religion}
 \target{Rissitic mythology}
-\index{Durcac!religion}
+\index{\Durcac!religion}
 \index{Rissitics!religion}
 The Rissitic religion, also called Rissitism, is based around the worship of the god \HriistN, also called Rissit. 
 \quo{Rissitics} is also the term used by nonbelievers for adherents of the religion. 
@@ -6429,7 +6429,7 @@ The river \hs{Nerim} runs south from the Hirum Gulf.
 \target{Durcac Continent}
 \index{\Durcaccontinent}
 A continent south of \hr{Velcad}{\Velcad}, southeast of the \hs{Imetrium}, northeast of \hs{Uzur} and west of the \hs{Orient}. 
-Contains \hs{Durcac}, among other things. 
+Contains \hr{Durcac}{\Durcac}, among other things. 
 
 
 
@@ -6551,7 +6551,7 @@ Generic term for the lands north of \hr{Velcad}{\Velcad} (many of which are not 
 \section{Orient}
 \target{Orient}
 \index{Orient}
-The area southeast of \hr{Velcad}{\Velcad} (east of \hs{Durcac} and south of the \hr{Serpentines}{\Serplands}). 
+The area southeast of \hr{Velcad}{\Velcad} (east of \hr{Durcac}{\Durcac} and south of the \hr{Serpentines}{\Serplands}). 
 Informally split into the \hs{Near Orient} and the \hs{Far Orient}.  
 
 
@@ -6612,7 +6612,7 @@ Marks the border between \hs{Andras} and \hr{Scyrum}{\Scyrum}.
 \section{\Risvaelsea}
 \target{Risvael Sea}
 \index{\Risvaelsea}
-A large sea in the centre of \hr{Azmith}{\Azmith} that marks the southern border of \hr{Velcad}{\Velcad}, the northern border of \hs{Durcac} and the easter border of the \hs{Imetrium}. In it lie the two large isles of \hs{Fendor} and \hs{Tugan}. 
+A large sea in the centre of \hr{Azmith}{\Azmith} that marks the southern border of \hr{Velcad}{\Velcad}, the northern border of \hr{Durcac}{\Durcac} and the easter border of the \hs{Imetrium}. In it lie the two large isles of \hs{Fendor} and \hs{Tugan}. 
 
 
 
