--- a/World/Azmith/Vaimons.tex
+++ b/World/Azmith/Vaimons.tex
@@ -1245,6 +1245,7 @@ The central stronghold of the Redcor.
 The capital city is that surrounding the Topaz \Chateau. This city is very much divided into rich and poor quarters. Like \hr{Malcur rich and poor}{\Malcur}, but more extreme. The \Chateau{} is extremely tall, and the rich Redcor live infinitely far removed from the hardships, poverty and suffering of the common folk. 
 
 The \Chateau itself had crystalline walls and looked as if it really was build of topaz. 
+It was a beautiful and mysterious city of sorceresses. 
 Compare to Kor-Avul-Thaa from the song \bandsong{Bal-Sagoth}{As the Vortex Illumines the Crystalline Walls of Kor-Avul-Thaa}. 
 
 \target{Bane ruin under Chateau}
@@ -2284,34 +2285,8 @@ And \malachim?
 
 
 
+\subsection{Cost}
 
-
-\subsection{Demography}
-\target{Vaimon demography}
-There are \hr{Rethyax demography}{more Vaimons than \rethyaxes}. 
-
-
-
-
-
-
-
-
-
-\subsection{How to cast it}
-Vaimon magic uses mostly fast, simple \quo{point-and-click} spells: 
-You simply invoke the names of one or more \Archons, mentally visualize the effect you want, and perform a simple gesture such as pointing your finger. 
-%Stricly speaking, neither gesture nor speech are actually needed. The name is a way of contacting the \Archon{}, which is not necessary if you are experienced and finely attuned to Iquin or Nieur. (Or is it? Maybe the invocation is always necessary.) 
-The gesture is not really needed. 
-It is merely a psychological aid to help shape the spell, which is unneeded if you have fine control over the \Archons. 
-The invocation of the name may or may not be needed, I'm not sure. If the spell is difficult or requires much power, you may have to keep chanting the name(s) over and over. 
-Vaimons can also combine into a circle to perform ritual magic. Such a circle is much less flexible and slower to react than a single caster, but can cast more powerful and complex magic. 
-
-
-
-
-
-\subsubsection{Cost}
 Vaimon magic is more subtle than Chaos magic and warps only the soul, not the body\ldots{} mostly.
 
 \Iquin{} brainwashes the channeller with the \quo{virtue} that the \Sephirah{} in question represents. The more the mage channels the \Sephirah{}, the more its virtue will be ingrained in his mind. So people who channel Iquin a lot tend to become zealously devoted to the Iquinian ideology (if not to the Church itself). 
@@ -2379,6 +2354,49 @@ It is unknown if the \quo{voices} are actually the voices of \qliphoth{} or just
 
 \subsubsection{Parasitism}
 Vaimon magic is parasitic, because it is powered by \hr{Parasitic Archons}{the life force stolen by the \Archons}. 
+
+
+
+
+
+\subsubsection{Stigmata}
+\target{Vaimon stigmata}
+When a Vaimon expended a lot of energy this would take a toll on his body. 
+Wounds would form\dash inner and outer. 
+Some of these wounds never fully healed.
+They remained as scars, called \emph{Vaimon stigmata}. 
+Through their lifetimes, Vaimons typically accumulated these stigmata. 
+Older Vaimons tended to have more. 
+
+These stigmata were a kind of \hr{Decrepity}{decrepities}.
+
+
+
+
+
+
+
+
+\subsection{Demography}
+\target{Vaimon demography}
+There are \hr{Rethyax demography}{more Vaimons than \rethyaxes}. 
+
+
+
+
+
+
+
+
+
+\subsection{How to cast it}
+Vaimon magic uses mostly fast, simple \quo{point-and-click} spells: 
+You simply invoke the names of one or more \Archons, mentally visualize the effect you want, and perform a simple gesture such as pointing your finger. 
+%Stricly speaking, neither gesture nor speech are actually needed. The name is a way of contacting the \Archon{}, which is not necessary if you are experienced and finely attuned to Iquin or Nieur. (Or is it? Maybe the invocation is always necessary.) 
+The gesture is not really needed. 
+It is merely a psychological aid to help shape the spell, which is unneeded if you have fine control over the \Archons. 
+The invocation of the name may or may not be needed, I'm not sure. If the spell is difficult or requires much power, you may have to keep chanting the name(s) over and over. 
+Vaimons can also combine into a circle to perform ritual magic. Such a circle is much less flexible and slower to react than a single caster, but can cast more powerful and complex magic. 
 
 
 
