--- a/World/DenizensMinor.tex
+++ b/World/DenizensMinor.tex
@@ -1481,9 +1481,9 @@ There are a number of races/ethnic groups of \humans{} on \Miith{}, who correspo
   \item[{\Velcadians}] 
     have pale skin and look like the Germanic people of northern Europe (Germany, England, Scandinavia). They are the most common \human{} race, dominating most of \Velcad{} and the Northern Kingdoms. 
   \item[{Fraens}] 
-    have somewhat dark skin and resemble people from southern Europe (Greece, Italy). They are common in the Imetrium, Durcac and southern \Velcad{}. 
+    have somewhat dark skin and resemble people from southern Europe (Greece, Italy). They are common in the Imetrium, \Durcac and southern \Velcad{}. 
   \item[{Kohons}] 
-    have dark brown or black skin and negroid features (corresponding to Africans/Negroes). They are common in Durcac and the Far South. 
+    have dark brown or black skin and negroid features (corresponding to Africans/Negroes). They are common in \Durcac and the Far South. 
   \item[{Hoyds}] 
     have brown skin and look like Arabs. They are common in southeastern \Velcad{} (nations such as Geica) and the Orient. 
 \end{description}
@@ -1771,7 +1771,7 @@ They included the \hs{High Telepaths}.
 \target{Jinn}
 \index{\jinni}
 The \jinn were a race of immortals.
-They predated \humans and lived, among other things, in the lands southeast of Durcac. 
+They predated \humans and lived, among other things, in the lands southeast of \Durcac. 
 \Secherdamon's cult encountered the \jinn and the humanoids who served and worshipped them, and merged with them.
 He waged wars with the \jinn, but eventually struck alliances with many of them, and eventually came to rule over them.
 The lords of the \jinn and the greatest among them were the ifrits.
@@ -2094,7 +2094,7 @@ All \meccara{} suffer from a mild dyslexia. The part of their brain that allows 
 
 
 \subsection{Habitat}
-\Meccara{} are most widespread in the tropical lands of Uzur and in the Far South. They are relatively common in the Imetrium and Durcac and uncommon in \Velcad{}. They are rare in the North and East. Most \meccara{}-dominated communities lie in Uzur, but there are \meccaran{} tribes scattered across \Velcad{} and other places as well. 
+\Meccara{} are most widespread in the tropical lands of Uzur and in the Far South. They are relatively common in the Imetrium and \Durcac and uncommon in \Velcad{}. They are rare in the North and East. Most \meccara{}-dominated communities lie in Uzur, but there are \meccaran{} tribes scattered across \Velcad{} and other places as well. 
 
 
 
@@ -4163,7 +4163,7 @@ The name is inspired by the bird-monster Groth-Golka that appears in \authorbook
 
 
 \subsection{Skekkok}
-A large scorpion-like creature that lives in the deserts of Durcac. 
+A large scorpion-like creature that lives in the deserts of \Durcac. 
 
 The name is an onomatopoeia for the clicking sounds the creatures make.
 
@@ -4487,7 +4487,7 @@ In Rissitic they are called \emph{\tashrek{}}.
 
 
 \subsubsection{Habitat}
-\Cortios{} are most common in Durcac, southern Irokas and the Orient, but some exist in southern \Velcad{} and the Imetrium. 
+\Cortios{} are most common in \Durcac, southern Irokas and the Orient, but some exist in southern \Velcad{} and the Imetrium. 
 
 
 
@@ -4536,7 +4536,7 @@ Also called \quo{dagger-drake}.
 \index{ivory cobra}
 A cobra snake that is white in \colour and grows up to 150 cm in length. The ivory cobra is highly poisonous and its bite can easily kill a \human{} or \scatha{} (the teeth of an adult are strong enough to penetrate clothes and a \ps{\scatha} scales). 
 
-The ivory cobra lives primarily in Durcac. The animal is sacred to the Rissitics and a symbol of their religion and empire. 
+The ivory cobra lives primarily in \Durcac. The animal is sacred to the Rissitics and a symbol of their religion and empire. 
 
 
 
