--- a/World/Magic.tex
+++ b/World/Magic.tex
@@ -51,7 +51,9 @@ Different schools of magic carry different prices.
 
 All these effects fall most strongly upon those mages of weaker mind. The more strong-willed mages are able to resist it better and tend to keep their personality more intact in the long run. 
 
-If you practice two or more different kinds of magic, each with different side effects, these side effects may pull in different directions. This is the case with a Vaimon who uses both Iquin and Nieur: Iquin works to make him principled and virtuous, whereas Nieur works to make him savage and uninhibited. In such cases, these opposing forces may sometimes balance each other out, so that the mage can remain stable. On the other hand, they may also cause the mage to go schizophrenic or otherwise mad (perhaps even developing a genuine split personality) from the strain of having his mind pulled in two opposite directions. 
+If you practice two or more different kinds of magic, each with different side effects, these side effects may pull in different directions. This is the case with a Vaimon who uses both \iquin and \itzach: \iquin works to make him principled and virtuous, whereas \itzach works to make him savage and uninhibited. In such cases, these opposing forces may sometimes balance each other out, so that the mage can remain stable. On the other hand, they may also cause the mage to go schizophrenic or otherwise mad (perhaps even developing a genuine split personality) from the strain of having his mind pulled in two opposite directions. 
+
+Vaimons, for example, developed \hr{Vaimon stigmata}. 
 
 
 
@@ -328,7 +330,7 @@ And they can get pretty powerful, too.
 \index{sorcerer-kings}
 In the \hr{Scatha Age}{\Scatha Age}, in \Azmith, sorcerer-king were less common than one might think. 
 In some \scathaese cultures, where the \hr{Ortaican religion}{\Ortaican religion} still dominated, \rethyax-dominated \hr{Baccon}{\baccons} still held power. 
-But in Iquinian countries, sorcerer-kings were rare. 
+But in \Iquinian countries, sorcerer-kings were rare. 
 
 \begin{prose}
   \ta{%
@@ -1600,7 +1602,7 @@ The \nexuses{} include (remember to give them all shapes and names!):
     Imetric \nexus. 
     
     \Apex: 
-    Salacar. 
+    \Sarokash. 
   
   \gitem{Unnamed} 
     Rissitic \nexus. 
