--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -2768,7 +2768,7 @@ There was some truth in this.
 \subsection{Demographics}
 \subsubsection{Habitat}
 \Scathae{} are among the most widespread humanoids on \Miith{}. 
-They are common in all lands except the Northern Kingdoms, but especially dominant in the Imetrium, Durcac and Irokas. 
+They are common in all lands except the Northern Kingdoms, but especially dominant in the Imetrium, \Durcac and Irokas. 
 
 
 
@@ -2787,7 +2787,7 @@ The \scathaese{} race can be divided into three major subraces:
   \gitem[\Mekriis]{\Mekrii}
     \target{Mekrii}
     Red or reddish brown scales.
-    Most common in Durcac and the Orient. 
+    Most common in \Durcac and the Orient. 
     Peoples include the \hr{Shurco}{\Shurco} and \hs{Rissitics}. 
   \gitem[\Lois]{\Loi}
     \target{Loi}
