--- a/World/ResphanRace.tex
+++ b/World/ResphanRace.tex
@@ -2092,11 +2092,6 @@ Sexuality should be embraced wildly and without inhibition.
 Sometimes they have sex in public. 
 Often to show off. 
 
-\target{Mystraacht fertility}
-The \Mystraacht were somewhat more fertile than the other dynasties.
-It was believed that this was because they had fewer sexual inhibitions.
-They revelled in sex without restraint, and their bodies (and the Heart) rewarded them for it.
-
 \target{Mystraacht amazons}
 Many \resphan{} societies had a \hr{Resviel do not fight}{principle that \resviel{} should not fight in physical combat}. 
 \Mystraacht{} had no such rule. 
@@ -2539,7 +2534,7 @@ Repeated consumption over short time leads to physical addiction.
 Once badly addicted, a \human will need it regularly or she will die.
 
 Drinking \resphan blood also has a psychological effect of making the drinker instinctively devoted to the \resphan in question.
-She will effectively fall in love and will feel an urge to serve him.
+He or she will effectively fall in love and will feel an urge to serve him.
 
 
 
@@ -2568,21 +2563,40 @@ Others have survived in the \hr{Wild}{\Wylde}.
 
 
 
-\subsubsection{Immortality and healing}
+\subsubsection{Healing}
+\target{Ketherain heal faster}
+A \resphan could heal almost any injury given time, except \hr{Decrepity}{decrepities}. 
+The higher \quo{tiers} of \resphain (\satharioth and \ketherain) healed faster than the lower tiers (\thelyadeth and \bezedeth). 
+
+
+
+
+
+\subsubsection{Lifespan and mortality}
+\target{Resphan lifespan}
 \target{Resphan immortality}
 \target{Ashenblood lesser immortality}
-\Resphain were \hr{immortal}{immortal}.
+\Resphain had a natural lifespan of 200-300 years. 
+After this they would weaken and die of old age like \humans. 
 
-Only pureblood \resphain possessed \hs{True Immortality}.
-\Ashenbloods died permanently when they were killed.
+By consuming the essence of \humans and similar lesser beings, a \resphan could grow in power and extend his lifespan to 300-500 years. 
+But throughout his life, he would gradually accumulate \hr{Decrepity}{decrepity} and his hunger would grow so that he needed more and more essence each year to stay alive. 
+If deprived of essence he would grow even more decrepit in both body and mind (in the form of madness, dementia and deformity) and ultimately die a horrible death. 
+
+By consuming the essence of \resphain and other greater beings, a \resphan could grow even more powerful and live up to 500-1000 years. Such \hr{Cannibal Resphain}{cannibal \resphain} saw their hunger grow quickly. 
+Consuming \resphan essence was immediately addictive, and an addict deprived of essence would grow mad and decrepit and die very soon. 
+
+This led to most \resphain becoming preoccupied with seeking out ever more essence in order to keep themselves alive, which ended up \hr{Resphan economy}{forming the basis of their entire economy}.
+
+A minority of \resphain refused to consume \human essence.
+These ascetics were weaker than their vampiric kin and lived shorter lives, but they were also happier and more peaceful of mind. 
+They died quickly and gracefully and were not subject to the madness and dementia that plagued their vampiric kin. 
+
+Only the \satharioth (and perhaps a few other special individuals) \hr{Sathariah immortality}{could truly live forever}. 
+
+A few of the more powerful pureblood \resphain earned the power of \hs{True Immortality} (the ability to reform after having their physical body destroyed). 
 
 See also the section on \hr{Kinds of immortality}{different kinds of immortality}. 
-
-A \resphan could heal almost any injury given time. 
-A pureblood could even regrow his entire body from scratch if it had been destroyed. 
-
-\target{Ketherain heal faster}
-The higher \quo{tiers} of \resphain (\satharioth and \ketherain) healed faster than the lower tiers (\thelyadeth and \bezedeth). 
 
 
 
@@ -2590,40 +2604,36 @@ The higher \quo{tiers} of \resphain (\satharioth and \ketherain) healed faster t
 
 
 \subsubsection{Procreation}
+\target{Resphan procreation}
 \Resphain{} can be born of \resvil{}, \human{} or \nephilic{} mothers, but the father is always a \resphan. 
 
-The children born of a union between a \resphan{} and a mortal (\human{} or \nephil) woman will always be a \resphan{} or \resvil, and as full-blooded as the child of a \resphan{} and a \resvil. 
+The children born of a union between a \resphan{} and a mortal (\human{} or \nephil) woman will always be a \resphan, and as full-blooded as the child of a \resphan{} and a \resvil. 
+
+For a male \resphan, orgasm and ejaculation carried with it a permanent loss of essence. 
+Some \resphain chose to remain celibate or practiced having sex without ejaculating. 
+Most \resphain chose to accept the loss of essence in exchange for the pleasure of orgasm and ejaculation. 
+Each orgasm would leave him slightly weakened and his lifespan shortened. 
+
+Even when a \resphan had sex with a \resvil and ejaculated, there was no guarantee that she would conceive. 
+A \resvil could only become pregnant voluntarily, never by accident. 
+Conception required a permanent investment of essence from the mother, and even then it was not guaranteed to succeed. 
+If she successfully conceived and gave birth, she would be permanently weakened and her lifespan shortened.
+Hence, despite potentially having lots of sex, \resviel conceived very rarely, and some never reproduced. 
+(Unlike mortal women, a \resvil{} remains fertile throughout her entire life. 
+Her body grows new eggs periodically, so she can bear a theoretically unbounded number of children.) 
 
 A mortal man cannot impregnate a \resvil; her body will accept nothing less than \resphan{} seed. 
-(This is a deliberate design feature: A \ps{\resvil}{} womb is precious and cannot be wasted on a bastard half-breed; a \resphan{} has plenty of sperm to spread around.)
 
-A \resvil was fertile all the time.
-They had safe periods and fertile periods. 
-
-A \ps{\resphan} seed is always fertile and may impregnate any woman he fucks, mortal or immortal. 
-
-Unlike mortal women, a \resvil{} remains fertile throughout her entire life. 
-Her body grows new eggs periodically, so she can bear a theoretically unbounded number of children. 
-
-\Resphain{} are born more well-developed than mortals. 
-This is because they have \hr{Life drain}{drained} so much life-force from their mother. 
-For the same reason, they need not drink milk. 
-They start feeding on flesh, blood and souls immediately. 
-
-A \resvil mother always died in childbirth.
-Every new \resphan life was bought with death.
-Usually it took only days for the mother to revive, though.
-But in time she would recover fully. 
+A \resphan's seed could impregnate a mortal woman.
+This happened rarely and usually as an accident, but it did happen. 
 
 A mortal woman who gives birth to a \resphan{} child will invariably die in childbirth as the parasitic \resphan{} sucks all life-force out of her. 
-She will also suffer while carrying the wicked child. 
+She will also suffer while carrying the wicked child\dash pain, nightmares, hallucination and possibly madness. 
 
-When it is discovered that a mortal woman bears a \resphan{} child, she will usually be eaten. 
+When it is discovered that a mortal woman bears a \resphan{} child, she will sometimes be eaten. 
 This is a great \honour for her. 
-But some women escape or are released. 
+Some women escape or are released. 
 They give birth to \hr{Beuzed}{\bezed} children. 
-
-The \Mystraacht were \hr{Mystraacht fertility}{slightly more fertile than the other dynasties}.
 
 
 
@@ -2670,8 +2680,11 @@ The \resphain{} are divided into four social classes:
   \target{Bezed}
   \target{Beuzed}
   Half-breeds, born of a \resphan{} father and a \human{} or \nephilic{} mother. 
-  They are considered inferior by their full-blooded brethren. 
-  They lack wings, often have gray skin rather than pure black, and are generally smaller and weaker. 
+  They were considered inferior by their full-blooded brethren. 
+  They lacked wings.
+  They had pale white skin instead of brown.
+  Their hair and feathers were white or gray (instead of the wide variety of colours that normal \resphain exhibit). 
+  They were smaller and weaker than purebloods. 
   They are disparagingly called \quo{\ashenbloods}\dash a reference to how they kill their mothers during birth. 
   
   \Human-born \resphain{} are short and skinny. 
@@ -2683,7 +2696,7 @@ The \resphain{} are divided into four social classes:
   The \bezedeth{} are particularly reviled because they take up space in the \hr{Matrix}{\matrix} and consume precious \hs{Heart} energy but will never be able to give anything back to the \resphan{} race, because they are sterile. 
   
   A \bezed{} \resvil{} can never become pregnant. 
-  \Bezed{} males can sometimes impregnate a mortal woman (never a \resvil), but the child is always stillborn and often deformed. 
+  \Bezed{} males can sometimes impregnate a mortal woman (never a \resvil), but the child is usually stillborn and often deformed. 
 \end{gloss}
 
 
@@ -2699,11 +2712,11 @@ The \resphain{} are divided into four social classes:
 
 \subsubsection{Sexual maturity}
 \target{Resphan sexual maturity}
-Immediately when they are born, they resemble mortal children of about five years, if perhaps somewhat smaller. 
-They grow to physical adulthood quickly, and are sexually mature when they are less than ten years old. 
+\Resphain grew and matured half as fast as \humans. 
+They became sexually mature somewhere in their 20s and were fully developed at about age 40. 
 
-Or perhaps the above was only true for \Thanatzil, who was a special case. 
-Perhaps regular \resphain{} mature more slowly. 
+\Thanatzil was a special case. 
+He matured in less than ten years. 
 
 
 
@@ -2746,6 +2759,74 @@ It shows you know culture and fine arts and stuff.
 It's a way of signalling status. 
 
 Bloodwine with \resphan{} blood is the best kind, surpassed only by bloodwine with \draconic{} blood. 
+
+
+
+
+
+\subsubsection{Cannibalism}
+\target{Cannibal Resphain}
+\target{Resphan cannibals}
+In order to grow in power and \hr{Resphan lifespan}{extend their lives}, some \resphain took to consuming the essence of other \resphain and other greater beings. 
+These cannibal \resphain grew much more powerful (physicall and magically) than their brethren, but at a price. 
+Eating \resphan essence was instantly addictive, and the withdrawal symptoms included madness and mutations (\hr{Decrepity}{decrepity}). 
+Their thirst for essence would grow with time, and they would need to consume more and more \resphain to stay alive. 
+
+Consuming \resphan essence caused the cannibal's skin to sport black spots. 
+These spots would grow as he consumed more essence, eventually turning his skin pure black. 
+This was essentially a kind of decrepity that could not easily be concealed. 
+
+Obviously such cannibals were a menace to other \resphain around them, so many \resphan cultures outlawed the practice and hunted down and killed cannibals whenever possible. 
+In other cultures, an elite of cannibals rose to power and became the rulers. 
+These cannibal rulers would invariably lay down laws to restrict and limit cannibalism in order to ensure social stability. 
+\Mystraacht was one such culture. 
+
+Some cannibals became \hr{Resphan pirates}{outlaw pirates}. 
+
+
+
+
+
+\subsubsection{Citadels, demesnes and manors}
+The \resphain{} have most of their citadels in \hr{Nyx}{\Nyx}, where they feel most at home are are in contact with their roots and their \hr{Dweomer}{\dweomers}. 
+
+They also have \emph{demesnes} (estates with farmland). 
+These are not in \Nyx{} but in \hr{Azmith}{\Azmith} and other \hr{Tembrae}{\Tembraean} Realms, since \hr{Nyx is a parasite Realm}{\Nyx{} has no fertile farming land} and must steal from other Realms. 
+Each demesne has a central manor from which the \resphain{} rule. 
+
+
+
+
+
+
+
+\subsubsection{Economy}
+\target{Resphan economy}
+\target{Jal}
+\index{\jal}
+Each \resphan, once he began consuming human essence, \hr{Resphan lifespan}{would need ever more and more essence to stay alive}. 
+This ended up dominating the entire \resphan economy. 
+The \jal\dash a unit used to measure essence\dash became their currecy. 
+Everything came to be priced and measured in \jal. 
+Every old \resphan's life became a struggle to secure enough essence to stay alive.
+Every young \resphan's life became a struggle to build a career and an income that would allow him to keep himself alive in old age. 
+
+Moreover, \resphain could only \hr{Resphan procreation}{procreate by sacrificing some of their essence}. 
+A parent would be permanently weaker and require more \jal to stay alive. 
+This discouraged them from having children. 
+This was a terrible Prisoner's Dilemma: 
+The well-being of their civilizations as a whole relied on new \resphain being born and the old \resphain dying when they no longer pulled their weight. 
+But the \quo{old guard} refused to die and used their entrenched position to drag the entire \resphan race down in stagnation. 
+
+\target{Resphan farms}
+The \resphain built great farms all across the Realms where they would raise food for themselves and their captive \humans.
+They also built mines and factories to supply their empires. 
+The agriculture and industry were tended by slave \humans and \nephilim, downtrodden and controlled in the most totalitarian manner. 
+These \humans and \nephilim were mentally starved because of their miserable lives, and so their essence was feeble and barely edible. 
+Those \humans intended for \resphan consumption were bred elsewhere\dash the great farms existed mostly to feed this \human livestock. 
+
+Some \resphain\dash especially \hr{Cannibal Resphain}{cannibals}\dash instead lived as outlaws and pirates, raiding farms instead of tending their own.
+These pirate \resphain often looked down on their \quo{farmer} kin and saw themselves as a superior culture of warriors and predators.
 
 
 
@@ -2804,12 +2885,10 @@ See also the \hr{Myths of vanquished monsters}{Iquinian myths of vanquished mons
 
 
 
-\subsubsection{Citadels, demesnes and manors}
-The \resphain{} have most of their citadels in \hr{Nyx}{\Nyx}, where they feel most at home are are in contact with their roots and their \hr{Dweomer}{\dweomers}. 
-
-They also have \emph{demesnes} (estates with farmland). 
-These are not in \Nyx{} but in \hr{Azmith}{\Azmith} and other \hr{Tembrae}{\Tembraean} Realms, since \hr{Nyx is a parasite Realm}{\Nyx{} has no fertile farming land} and must steal from other Realms. 
-Each demesne has a central manor from which the \resphain{} rule. 
+\subsubsection{Piracy}
+\target{Resphan pirates}
+Some \resphain\dash especially \hr{Cannibal Resphain}{cannibals}\dash instead lived as outlaws and pirates, raiding the \hr{Resphan farms}{farms of other \resphain} instead of tending their own.
+These pirate \resphain often looked down on their \quo{farmer} kin and saw themselves as a superior culture of warriors and predators.
 
 
 
@@ -3184,18 +3263,13 @@ Remember that different weapons are connected to the different Paths of \hr{Resp
 \subsubsection{Appearance}
 \Resphain{} look like \humans, but taller and more beautiful, more perfect. 
 Most markedly, they sprout a pair of great feathered wings on their backs. 
-On some \resphain{} these wings are tattered and torn\dash why? 
-Obvious candidates for this are the \Kezeradi{} survivors, and maybe Ramiel, if he is able to assume \resphan{} form at times, before he has regained his full memory (and, with it, his full perfection). 
+On some \resphain{} these wings are tattered and torn. 
+(Why? 
+Obvious candidates for this are the \Kezeradi{} survivors, and maybe Ramiel, if he is able to assume \resphan{} form at times, before he has regained his full memory (and, with it, his full perfection).)
 
-By nature, \resphain{} have glossy onyx black skin. 
-(This was a side effect of the mingling of \SitraAchra and \nephilic{} genes.)
-The skin \colour varies a bit, though, even among purebloods. 
-It can be slightly gray, or bluish, or chocolatey brown, or very dark red.
-
-\Resphan hair and feathers can be black, but they can also be other \colours: Grays, browns, reds, or even (rarely) white, yellow or orange.
-All a \resphan's body hair and feathers will usually be of one single \colour.
-
-Many dye their hair (white or silvery \colours being most common), and some even dye their skin. 
+\Resphan skin was normally dark brown. 
+\Resphan hair and feathers varied widely and could take many colours: Black, gray, brown, red, white, yellow or even orange.
+Many dyed their hair (most commonly in white or silvery \colours, occasionally blues or purples). 
 
 
 
@@ -3203,9 +3277,11 @@ Many dye their hair (white or silvery \colours being most common), and some even
 
 \subsubsection{Beards}
 \index{beard!\resphain}
-Male \resphain{} rarely wear beards. 
-They can grow them, but most shave them off. 
-The reason for this is that \nephilim{}, and \nephil-born \hr{Ashenblood}{\ashenbloods}, are very hairy and bearded, and purebloods want to distance themselves from these lower, more bestial people. 
+Male \resphain could grow beards. 
+In \Mystraacht most men wore beards. 
+In \CiriathSepher most males shaved them off. 
+
+\Nephil-born \hr{Ashenblood}{\ashenbloods} had much more body hair than other \resphain.
 
 
 
@@ -3314,20 +3390,6 @@ These \resphain{} see themselves as true \Miithians, the ultimate heirs to the l
 
 The dynasties count as members only pureblood \resphain{}. 
 The \ashenblooded{} commoners are not members of the dynasties, although most of them are in service to one dynasty. 
-
-
-
-
-
-\subsubsection{Economy}
-\target{Resphain's parasitic economy}
-The \resphan{} dynasties base their economies mostly on the \quo{stock} they hold in all sorts of mortal kingdoms. 
-Through the Cabal they manipulate mortals and make sure that some food and other goods are channeled to them. 
-That's what they live on. 
-
-But there are some places where the \resphan{} have farms and the like directly controlled by them. 
-
-\hr{Nyx is a parasite Realm}{\Nyx{} is a parasite Realm}.
 
 
 
@@ -3760,15 +3822,48 @@ Ramiel and \Shiaraid{} belong to this group.
 
 
 
-\subsection{Physique}
-The \satharioth{} are terrible to behold. 
 
-\lyricstitle{\SETolltheHounds{} p.108}{
-  Through the gate\ldots{} he saw \emph{him} [Anomander Rake] approaching. 
-  From the below city. 
-  His forearms sheathed in black glistening scales, his bared chest made a thing of natural \armour. 
-  The blood of Tiam ran riot through, fired to life by the conflation of chaotic sorcery, and his eyes flowed with ferocious will. 
-}
+\subsection{Biology}
+\subsubsection{Attempts to create more \satharioth}
+Since the inception of the original \satharioth, there have been attempts at creating more of them. 
+All have failed, for a number of reasons:
+
+\begin{itemize}
+  \item 
+    The \satharioth{} and \banelords{} keep the technology a secret because they don't want competition. 
+  \item
+    To create new \satharioth{} you would need to consume an \uber-powerful \vertex{}. 
+    \Nexagglachel{} was one of the greatest, most formidable \dragons{} that ever existed. 
+    Few of his like exist today, and none of those are stupid enough to let themselves capture. 
+\end{itemize}
+
+
+
+
+
+\subsubsection{Fragments of \Nexagglachel}
+\target{Fragments of Nexagglachel}
+When he was killed, \hr{Nexagglachel}{\Nexagglachel} was symbolically dismembered, and each \sathariah{} consumed a part of his body: 
+
+\begin{itemize}
+  \item \Azraid: Brain.
+  \item Ramiel: A claw. 
+  \item \Shiaraid: \hr{Shiaraid's sexuality}{The part that let him endure pain}. 
+  \item \Zachirah: Some sexual organ. 
+\end{itemize}
+
+
+
+
+
+\subsubsection{Immortality}
+\target{Sathariah immortality}
+The \satharioth did not age. 
+They did not \hr{Resphan lifespan}{automatically accumulate decrepity like normal \resphain did}.
+While their hunger for essence was great, it remained constant (or grew slowly in tandem with the individual's power).
+It did not grow on its own. 
+This meant that an old \sathariah could sustain himself on vastly less essence than a regular \resphan of similar age. 
+So the \satharioth could live for many thousands of years. 
 
 
 
@@ -3847,35 +3942,15 @@ Originally there were eleven (\hr{Satharioth die}{surviving}) \satharioth{}, of 
 
 
 
+\subsection{Physique}
+The \satharioth{} are terrible to behold. 
 
-\subsection{Biology}
-\subsubsection{Attempts to create more \satharioth}
-Since the inception of the original \satharioth, there have been attempts at creating more of them. 
-All have failed, for a number of reasons:
-
-\begin{itemize}
-  \item 
-    The \satharioth{} and \banelords{} keep the technology a secret because they don't want competition. 
-  \item
-    To create new \satharioth{} you would need to consume an \uber-powerful \vertex{}. 
-    \Nexagglachel{} was one of the greatest, most formidable \dragons{} that ever existed. 
-    Few of his like exist today, and none of those are stupid enough to let themselves capture. 
-\end{itemize}
-
-
-
-
-
-\subsubsection{Fragments of \Nexagglachel}
-\target{Fragments of Nexagglachel}
-When he was killed, \hr{Nexagglachel}{\Nexagglachel} was symbolically dismembered, and each \sathariah{} consumed a part of his body: 
-
-\begin{itemize}
-  \item \Azraid: Brain.
-  \item Ramiel: A claw. 
-  \item \Shiaraid: \hr{Shiaraid's sexuality}{The part that let him endure pain}. 
-  \item \Zachirah: Some sexual organ. 
-\end{itemize}
+\lyricstitle{\SETolltheHounds{} p.108}{
+  Through the gate\ldots{} he saw \emph{him} [Anomander Rake] approaching. 
+  From the below city. 
+  His forearms sheathed in black glistening scales, his bared chest made a thing of natural \armour. 
+  The blood of Tiam ran riot through, fired to life by the conflation of chaotic sorcery, and his eyes flowed with ferocious will. 
+}
 
 
 
@@ -4052,7 +4127,7 @@ The capital of \Tarcharos was \hr{Hyardes}{\Hyardes Hold}.
 
 
 
-\section{History}
+\subsection{History}
 \target{Resphain invoked Umbra gods}
 Finally the sorcerer-lords of \Tarcharos attempted to make pacts with, or even control, the fell \hr{Umbra}{\umbrae} of the deep. 
 In their folly they called upon \Norganthus and \Tzyaragoth, hoping to use their power against their enemies. 
@@ -4100,7 +4175,10 @@ This was a collection of especially exotic and ghastly-looking towers.
 It was once the glorious capital of \Tarcharos.
 It was laid waste in the fall of \Tarcharos.
 
-No \resphain dwelt here. 
+It was known to all \resphain that the \resphan race had originated in \Tarcharos, although the exact tower was unknown. 
+(It was really \hr{Jazerubel}{\Jazerubel}.)
+
+No \resphain dwelt here after the fall of \Tarcharos. 
 The spires of \Carcosa were extremely tall, appearing to tower over all other spires (although it was hard to tell). 
 Eerily, the towers seemed to rise \emph{behind} the \hs{black stars} rather than in front of them. 
 
