--- a/World/World.tex
+++ b/World/World.tex
@@ -2596,7 +2596,7 @@ Among mortal scholars, the history of \Miith{} is sometimes semi-formally divide
     \target{Scatha Age}
     Everything after the \Human{} Age, according to some \scathaese{} scholars living in the period. 
     Named so because most of the major empires in this period were \scatha-dominated:
-    \Ortaica, Durcac, the Imetrium, \Tepharae{}, \Velcad. 
+    \Ortaica, \Durcac, the Imetrium, \Tepharae{}, \Velcad. 
     
     Others prefer to subdivide it into some more, shorter ages:
     
